themes/openfuture/assets/scss/style.scss
$font-size-root: 16px;
$yellow: #FFF100;
$primary: #000;
$secondary: #6D6E70;
$enable-rounded: false;
$enable-negative-margins: true;
$font-family-sans-serif: 'Argesta', 'Helvetica', sans-serif;

@import 'fonts';
@import 'bootstrap/scss/bootstrap';

body {
  background: #eee;
  margin: 0;
  color: $primary;
}

.btn {
  font-family: 'Chaney', 'Helvetica', sans-serif;
  text-transform: uppercase;
}

.btn:hover {
  background: #333;
}

.text-justify {
  text-align: justify;
}
.w-80 {
  width: 80%;
}
.text-yellow {
  color: $yellow;
}
input:focus, .btn:focus {
  outline: none;
}

.three-em {
  height: 3em;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Chaney', 'Helvetica', sans-serif;
}

h1 {
  font-size:2em;
  line-height: 0.9em;
}

h2, .ender {
  font-family: 'Chaney', 'Helvetica', sans-serif;
  line-height: 0.9em;
  font-size: 2.6em;
  margin: 0 auto;
  display:inline;
  clear:right;
}

h3 {
  font-size: 2.3em;
  line-height: 0.9em;
  width: 25%;
}
.newsletter-cta {
  background: #666;
  color: #fff;
  font-size: 0.85em;
  font-family: 'ArgestaItalic', 'Helvetica', sans-serif;
}
.mailchimp {
  .form-text {
    height: 2.715em;
    font-family: 'ArgestaItalic', 'Helvetica', sans-serif;
  }
}
.inner-shadow {
  box-shadow: inset 0 0 7px rgba(0,0,0,0.2);
}

.ender {
  line-height: 0;
}

.subtitle {
  font-size: 1.1em;
  font-family: 'ArgestaItalic', 'Helvetica', sans-serif;
  color: $secondary;
  line-height:1.2em;
  display:inline-block;
}

.main {
  background: #fff;
  max-width:1200px;
}

.social, .lead {
  background: $yellow;
}

.lead {
  position:relative;
  .btn{
    position:absolute;
    bottom:0;
    right: 0;
  }
  .lead-content {
    font-family: 'ArgestaItalic', 'Helvetica', sans-serif;
    font-size: 0.7em;
    line-height: 1.1em;
  }
}

.person {
  position:relative;
  .btn{
    position:absolute;
    bottom:0;
    right: 0;
  }
  .person-details {
    h2 {
      width: 30%;
      display: inline-block;
    }
    img {
      height: 18px;
    }
  }
}
.logo {
  width: 70%;
}

.footer {
  a {
    text-decoration: none;
    font-family: 'Chaney', 'Helvetica', sans-serif;
    text-transform: uppercase;
  }
  .info {
    font-size: 0.8em;
  }
}
.page-content {
  position: relative;
  .ender {
    margin-right: 2.5rem;
    position:absolute;
    bottom:0;
    right:0;
  }
}
@include media-breakpoint-up(sm) {
  h1{
    // font-size: 4em;
  }
  h2{
    // font-size: 2em;
  }
  h3{

  }
}

@include media-breakpoint-up(md) {
  body {
    font-size: 21px;
  }
  h1{
    font-size:2.5em;
  }
  h2, .ender{
    font-size: 4em;
  }
  h3{
    font-size: 3.5em;
  }
  .lead .lead-content {
    font-size: 0.9em;
  }
  .subtitle {
    font-size: 1.5em;
  }
  .logo {
    width: 580px;
  }
  .form-bg {
    .form-bg-inner{
      width:80%;
    }
    background: url('/images/newsletter-md1.svg') repeat-x center center;
  }
  .mailchimp {
    .form-text {
      height: 2.0687em;
    }
  }
}

@include media-breakpoint-up(lg) {
  .footer {
    background: $yellow;
  }
  .page-content .ender {
    position:unset;
  }
  .form-bg {
    .form-bg-inner{
      width: unset;
    }
    background: none;
  }
  .form-right {
    margin-top: 3.5em;
  }
}

